--- a/spigot/Dockerfile
+++ b/spigot/Dockerfile
@@ -2,3 +2,6 @@ FROM openjdk:7-jre-alpine
 
 MAINTAINER jkoan <info@jkoan.de>
 
+
+#https://docs.docker.com/engine/reference/builder/#/healthcheck
+#check status to report to dockerd
