--- a/bungeecord/Dockerfile
+++ b/bungeecord/Dockerfile
@@ -3,21 +3,13 @@ FROM openjdk:7-jre-alpine
 MAINTAINER jkoan <info@jkoan.de>
 
 #non-interactive installation
-ENV DEBIAN_FRONTEND noninteractive
-
-#default directory for SPIGOT-server
-ENV BUNGEECORD_HOME /bungeecord
-
-ENV SPIGOT_HOME=/minecraft \
-    SPIGOT_VER=latest
+ENV DEBIAN_FRONTEND=noninteractive BUNGEECORD_HOME /bungeecord ENV SPIGOT_HOME=/minecraft SPIGOT_VER=latest
 
 COPY rootfs /
 
-RUN chmod +x /start-bungeecord.sh
+RUN chmod +x /start-bungeecord.sh && adduser -s /bin/sh -D -h /bungeecord bungeecord
 
 WORKDIR "/bungeecord"
-
-RUN adduser -s /bin/sh -D -h /bungeecord bungeecord
 
 CMD /start-bungeecord.sh
 #https://docs.docker.com/engine/reference/builder/#/healthcheck
